# Learning-IOT-AI-Architect

./: .gitignore  README.md
Algorithms/: exemple-methodes.py
Algorithms/Exercices/: do_while_python_example.py
Algorithms/Exercices/Structure_cond/: demo.py  match.py
Algorithms/Exercices/exo_00/: exo_00.pc
Algorithms/Exercices/exo_01/: exo_01.py
Algorithms/Exercices/exo_010/: exo_10.pc
Algorithms/Exercices/exo_011/: exo_011.py
Algorithms/Exercices/exo_012/: exo_012.py
Algorithms/Exercices/exo_015/: exo_015.py
Algorithms/Exercices/exo_016/: exo_016.py
Algorithms/Exercices/exo_019/: exo_019.py
Algorithms/Exercices/exo_02/: exo_02.fprg
Algorithms/Exercices/exo_07/: exo_007.py
Algorithms/Exercices/exo_09/: exo_09.pc  exo_09.py
Algorithms/Exercices/extra/: Rect_area.py  celsius_To_fahrenheit.py
Algorithms/Exercises/: dimensions.py  enumerate  tableau.txt
Algorithms/Exercises/Structure_cond/: match.py
Algorithms/Exercises/exo_00/: exo_00.py
Algorithms/Exercises/exo_002/: exo_002.fprg  (+2 more)
Algorithms/exemple_operateur/: exemple_operateur.pc  exemple_operateur.py  ref_memoire_python
DBModeling/Exercises/: Ex_07.lo1  Ex_07.loo  ex_01.lo1  ex_01.loo  ex_02.loo  ex_03.lo1  ex_03.loo  exo04MLD.lo1  extra_exercises.txt
Python/pyhton_data_science/: main.py  pyproject.toml  test.ipynb
Python/pyhton_data_science/numpy/: 0_numpy_corr__intro.ipynb  0_numpy_enoncés__intro.ipynb  numpy_theorie_demo.ipynb
Python/pyhton_data_science/pandas/: country_pib.csv  pandasV2.ipynb
Python/pyhton_data_science/pandas/Exos/: exosPandas.py  exosPandasJupy.ipynb
(+90 files in other folders)
