[project]
name = "pyhton-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "lxml>=6.1.1",
    "numpy>=2.5.1",
    "pandas>=3.0.5",
    "pyodbc>=5.3.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
